Fix pedals spacing

--- a/src/app/stage/stage/stage.component.scss
+++ b/src/app/stage/stage/stage.component.scss
@@ -31,12 +31,6 @@
     padding: 16px 20px;
   }
 
-  .pedal + .pedal,
-  .pedal + .pedal-placeholder,
-  .pedal-placeholder + .pedal {
-    margin-left: 48px;
-  }
-
   .pedal-placeholder {
     width: 200px;
     height: 326px;
